@@ -20,6 +20,10 @@ jar {
     }
 }
 
+tasks.withType(JavaCompile).each {
+    it.options.compilerArgs.add('--enable-preview')
+}
+
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
